--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,13 @@
-# http://editorconfig.org
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
 end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
+indent_style = space
 insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
+[*{.java,.py}]
+indent_size = 4
+
+[*.{js,json,rb}]
+charset = utf-8
+indent_size = 2
